# JAVEngine

./: .gitignore  JAVEngine.sln  meson.build
JAVEngine/: JAVEngine.aps  JAVEngine.vcxproj  JAVEngine.vcxproj.filters  engine.cpp  engine.h  instance.h  main.cpp  resource.h
